<resources>
    <string name="app_name">FaceHook</string>
    <string name="add_account">Agregar cuenta</string>
    <string name="add_account_button">+ Agregar cuenta</string>
    <string name="check_now_button">Revisar ahora</string>
    <string name="checking">Revisando…</string>
    <string name="check_done_new">%1$d notificación(es) nueva(s)</string>
    <string name="check_done_none">Sin novedades</string>
    <string name="check_done_error">Error al revisar (¿sin red?)</string>
    <string name="accounts_title">Cuentas de Facebook</string>
    <string name="empty_accounts">Aún no agregas ninguna cuenta.</string>
    <string name="long_press_hint">mantén presionado para más opciones</string>
    <string name="session_detected">Sesión detectada</string>
    <string name="name_prompt">¿Cómo quieres llamar a esta cuenta?</string>
    <string name="name_hint">Ej. Personal, Trabajo, Tienda…</string>
    <string name="save_account">Guardar cuenta</string>
    <string name="notification_channel_name">Facebook</string>
</resources>
